move patchWith method from model to ServiceImpl